syntax = "proto3";

package protos;

import "Point.proto";

message Fox {
    Point headLocation = 1;
    Point tailLocation = 2;
}